--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./style.scss">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <main class="keys">
@@ -54,6 +54,6 @@
     <audio data-key="74" src="sounds/snare.wav"></audio>
     <audio data-key="75" src="/sounds/tom.wav"></audio>
     <audio data-key="76" src="/sounds/tink.wav"></audio>
-    <script src="/script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
